tests/snapshots/examples__common_tasks.snap
---
source: tests/examples.rs
expression: transcript(&common_tasks())
---
$ graphql-document-utils query normalize -q query.graphql
exit: 0
stdout:
query GetUser($filter: SearchFilter, $first: Int, $id: ID!) {
  company {
    employees(first: $first) {
      name
    }
  }
  search(filter: $filter) {
    __typename
    ... on Company {
      name
    }
    ... on User {
      email
    }
  }
  user(id: $id) {
    name
    profile {
      avatar {
        url
      }
      bio
    }
  }
}

$ graphql-document-utils query focus -s schema.graphql -q query.graphql User.email
exit: 0
stdout:
query GetUser($filter: SearchFilter) {
  search(filter: $filter) {
    ... on User {
      email
    }
  }
}

$ graphql-document-utils query strip -s schema.graphql -q query.graphql Profile
exit: 0
stdout:
query GetUser($id: ID!, $first: Int, $filter: SearchFilter) {
  user(id: $id) {
    name
  }
  company {
    employees(first: $first) {
      name
    }
  }
  search(filter: $filter) {
    __typename
    ... on User {
      email
    }
    ... on Company {
      name
    }
  }
}

$ graphql-document-utils schema prune -s schema.graphql -q query.graphql
exit: 0
stdout:
type Query {
  user(id: ID!): User
  company: Company
  search(filter: SearchFilter): [SearchResult]
}

type User {
  name: String
  email: String
  profile: Profile
}

type Profile {
  bio: String
  avatar: Avatar
}

type Avatar {
  url: String
}

type Company {
  name: String
  employees(first: Int): [User]
}

union SearchResult = User | Company

input SearchFilter {
  term: String
}

$ graphql-document-utils schema focus -s schema.graphql User
exit: 0
stdout:
"Anything with a global ID."
interface Node {
  id: ID!
}

type User implements Node {
  id: ID!
  name: String
  email: String
  profile: Profile
}

type Profile {
  bio: String
  avatar: Avatar
}

type Avatar {
  url: String
}

$ graphql-document-utils schema sort -s schema.graphql
exit: 0
stdout:
type Avatar {
  url: String
}

type Company implements Node {
  id: ID!
  name: String
  employees(first: Int): [User]
}

"Anything with a global ID."
interface Node {
  id: ID!
}

type Profile {
  bio: String
  avatar: Avatar
}

type Query {
  user(id: ID!): User
  company: Company
  search(filter: SearchFilter): [SearchResult]
}

input SearchFilter {
  term: String
}

union SearchResult = User | Company

type User implements Node {
  id: ID!
  name: String
  email: String
  profile: Profile
}
