tests/snapshots/examples__schema_focus.snap
---
source: tests/examples.rs
expression: transcript(&examples)
---
$ graphql-document-utils schema focus -s schema.graphql User Company
exit: 0
stdout:
"Anything with a global ID."
interface Node {
  id: ID!
}

type User implements Node {
  id: ID!
  name: String
  email: String
  profile: Profile
}

type Profile {
  bio: String
  avatar: Avatar
}

type Avatar {
  url: String
}

type Company implements Node {
  id: ID!
  name: String
  employees(first: Int): [User]
}

$ cat schema.graphql | graphql-document-utils schema focus SearchResult
exit: 0
stdout:
"Anything with a global ID."
interface Node {
  id: ID!
}

type User implements Node {
  id: ID!
  name: String
  email: String
  profile: Profile
}

type Profile {
  bio: String
  avatar: Avatar
}

type Avatar {
  url: String
}

type Company implements Node {
  id: ID!
  name: String
  employees(first: Int): [User]
}

union SearchResult = User | Company
