tests/snapshots/examples__schema_split.snap
---
source: tests/examples.rs
expression: transcript(&examples)
---
$ graphql-document-utils schema split -s supergraph.graphql -o subgraphs
exit: 0
stderr:
note: wrote subgraphs/accounts.graphql
note: wrote subgraphs/products.graphql
note: wrote subgraphs/reviews.graphql
wrote subgraphs/accounts.graphql:
schema @link(url: "https://specs.apollo.dev/federation/v2.0", import: ["@key", "@shareable", "@inaccessible"]) {
  query: Query
  mutation: Mutation
}

type Money @shareable {
  amount: Int!
  currency: String!
}

type Mutation {
  updateUsername(input: UpdateUsernameInput!): User
}

interface Node {
  id: ID!
}

type Org @key(fields: "id") {
  id: ID!
  name: String
}

type Query {
  me: User
  teams: [Team]
}

type Team @key(fields: "slug org { id }") {
  slug: String!
  org: Org!
  name: String
}

input UpdateUsernameInput {
  id: ID!
  username: String!
}

type User implements Node @key(fields: "id") {
  id: ID!
  username: String @shareable
  secret: String @inaccessible
  balance: Money
}
wrote subgraphs/products.graphql:
schema @link(url: "https://specs.apollo.dev/federation/v2.3", import: ["@key", "@shareable"]) {
  query: Query
}

type Book implements Media @key(fields: "id") {
  id: ID!
  title: String
  pages: Int
}

interface Media @key(fields: "id") {
  id: ID!
  title: String
}

type Money @shareable {
  amount: Int!
  currency: String!
}

interface Node {
  id: ID!
}

type Product implements Node @key(fields: "upc") {
  id: ID!
  upc: String!
  name: String
  weight: Int
  price: Money
  kind: ProductKind
  seller: User
}

enum ProductKind {
  BOOK
  MUSIC
}

type Query {
  topProducts(first: Int = 5): [Product]
  search(term: String!): [SearchResult]
  media: [Media]
}

union SearchResult = Product

type User @key(fields: "id", resolvable: false) {
  id: ID!
}
wrote subgraphs/reviews.graphql:
schema @link(url: "https://specs.apollo.dev/federation/v2.7", import: ["@key", "@external", "@requires", "@provides", "@override", "@interfaceObject"]) {
  query: Query
}

type Media @key(fields: "id") @interfaceObject {
  id: ID!
  reviews: [Review]
}

type Org @key(fields: "id", resolvable: false) {
  id: ID!
}

type Product @key(fields: "upc") {
  upc: String!
  name: String @override(from: "products", label: "percent(50)")
  weight: Int @external
  shipping: Int @requires(fields: "weight")
  reviews: [Review]
}

enum ProductKind {
  BOOK
  VIDEO
}

type Query {
  review(id: ID!): Review
}

type Review {
  body: String
  kind: ProductKind
  author: User @provides(fields: "username")
  product: Product
}

union SearchResult = Review

type Team @key(fields: "slug org { id }") {
  slug: String!
  org: Org!
  rating: Int
}

type User @key(fields: "id") {
  id: ID!
  username: String @external
  reviews: [Review]
}

$ graphql-document-utils schema prune -s supergraph.graphql -q supergraph-query.graphql | graphql-document-utils schema split -o subgraphs
exit: 0 | 0
stderr:
note: wrote subgraphs/accounts.graphql
note: wrote subgraphs/products.graphql
note: wrote subgraphs/reviews.graphql
wrote subgraphs/accounts.graphql:
extend schema @link(url: "https://specs.apollo.dev/federation/v2.0", import: ["@key", "@shareable"])

type User @key(fields: "id") {
  id: ID!
  username: String @shareable
}
wrote subgraphs/products.graphql:
schema @link(url: "https://specs.apollo.dev/federation/v2.0", import: ["@key"]) {
  query: Query
}

type Product @key(fields: "upc") {
  upc: String!
  name: String
  weight: Int
}

type Query {
  topProducts(first: Int = 5): [Product]
}

type User @key(fields: "id", resolvable: false) {
  id: ID!
}
wrote subgraphs/reviews.graphql:
extend schema @link(url: "https://specs.apollo.dev/federation/v2.7", import: ["@key", "@external", "@requires", "@provides", "@override"])

type Product @key(fields: "upc") {
  upc: String!
  name: String @override(from: "products", label: "percent(50)")
  weight: Int @external
  shipping: Int @requires(fields: "weight")
  reviews: [Review]
}

type Review {
  body: String
  author: User @provides(fields: "username")
}

type User @key(fields: "id") {
  id: ID!
  username: String @external
}
